terraform/security_groups.tf
resource "aws_security_group" "REFERENCE_NAME" {
  name        = "Jenkins SSH"
  description = "Allow inbound SSH from all IPs"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] #narrow for safety
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] #narrow for safety
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  vpc_id = "CHECK JENKINS_DEPLOY OUTPUT"
}
